Improve FSH PSI